Updated security.cfg for new db tables.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -294,6 +294,9 @@ public.bug                              = SELECT
 public.bugaffectsperson                 = SELECT, INSERT, UPDATE, DELETE
 public.bugtask                          = SELECT
 public.build                            = SELECT
+public.buildfarmjob                     = SELECT
+public.packagebuild                     = SELECT
+public.binarypackagebuild               = SELECT
 public.distribution                     = SELECT
 public.distributionsourcepackagecache   = SELECT, INSERT, UPDATE, DELETE
 public.distroarchseries                 = SELECT, UPDATE
@@ -345,6 +348,9 @@ public.binarypackagefile                = SELECT
 public.branchmergeproposal              = SELECT
 public.bugattachment                    = SELECT
 public.build                            = SELECT
+public.buildfarmjob                     = SELECT
+public.packagebuild                     = SELECT
+public.binarypackagebuild               = SELECT
 public.codeimportresult                 = SELECT
 public.diff                             = SELECT
 public.distribution                     = SELECT
@@ -630,6 +636,9 @@ public.binarypackagefile                        = SELECT
 public.binarypackagename                        = SELECT
 public.binarypackagerelease                     = SELECT
 public.build                                    = SELECT
+public.buildfarmjob                             = SELECT
+public.packagebuild                             = SELECT
+public.binarypackagebuild                       = SELECT
 public.component                                = SELECT
 public.componentselection                       = SELECT
 public.distribution                             = SELECT
@@ -784,6 +793,9 @@ public.job                                      = SELECT, INSERT, UPDATE, DELETE
 public.buildpackagejob                          = SELECT, INSERT, UPDATE, DELETE
 public.builder                                  = SELECT, INSERT, UPDATE
 public.build                                    = SELECT, INSERT, UPDATE
+public.buildfarmjob                             = SELECT, INSERT, UPDATE
+public.packagebuild                             = SELECT, INSERT, UPDATE
+public.binarypackagebuild                       = SELECT, INSERT, UPDATE
 public.distribution                             = SELECT, UPDATE
 public.distroseries                             = SELECT, UPDATE
 public.distroarchseries                         = SELECT, UPDATE
@@ -868,6 +880,9 @@ public.bugtracker                       = SELECT, INSERT, UPDATE, DELETE
 public.bugtrackeralias                  = SELECT, INSERT, UPDATE, DELETE
 public.bugwatch                         = SELECT, INSERT, UPDATE, DELETE
 public.build                            = SELECT, INSERT, UPDATE
+public.buildfarmjob                     = SELECT, INSERT, UPDATE
+public.packagebuild                     = SELECT, INSERT, UPDATE
+public.binarypackagebuild               = SELECT, INSERT, UPDATE
 public.builder                          = SELECT, INSERT, UPDATE
 public.buildqueue                       = SELECT, INSERT, UPDATE, DELETE
 public.job                              = SELECT, INSERT, UPDATE, DELETE
@@ -1058,6 +1073,9 @@ public.sourcepackagereleasefile         = SELECT, INSERT
 public.binarypackagefile                = SELECT, INSERT
 public.pocketchroot                     = SELECT
 public.build                            = SELECT, INSERT, UPDATE
+public.buildfarmjob                     = SELECT, INSERT, UPDATE
+public.packagebuild                     = SELECT, INSERT, UPDATE
+public.binarypackagebuild               = SELECT, INSERT, UPDATE
 public.sourcepackagerecipebuild         = SELECT, UPDATE
 public.buildqueue                       = SELECT, INSERT, UPDATE
 public.job                              = SELECT, INSERT, UPDATE
@@ -1143,6 +1161,9 @@ public.processor                        = SELECT
 public.processorfamily                  = SELECT
 public.distrocomponentuploader          = SELECT
 public.build                            = SELECT, INSERT, UPDATE
+public.buildfarmjob                     = SELECT, INSERT, UPDATE
+public.packagebuild                     = SELECT, INSERT, UPDATE
+public.binarypackagebuild               = SELECT, INSERT, UPDATE
 public.buildqueue                       = SELECT, INSERT, UPDATE
 public.job                              = SELECT, INSERT, UPDATE
 public.buildpackagejob                  = SELECT, INSERT, UPDATE
@@ -1801,6 +1822,9 @@ public.branch                           = SELECT
 type=user
 public.archive                          = SELECT
 public.build                            = SELECT
+public.buildfarmjob                     = SELECT
+public.packagebuild                     = SELECT
+public.binarypackagebuild               = SELECT
 public.buildqueue                       = SELECT
 public.buildpackagejob                  = SELECT
 public.job                              = SELECT
