rename ICodehosting -> ICodehostingAPI, Codehosting -> CodehostingAPI

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -295,7 +295,7 @@ branchfs_endpoint: none
 # Obsolete.
 branch_puller_endpoint: none
 
-# The URL of the XML-RPC endpoint that implements ICodehosting.
+# The URL of the XML-RPC endpoint that implements ICodehostingAPI.
 #
 # datatype: string
 codehosting_endpoint: none
