--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -630,7 +630,7 @@ pre.wrap {
 table.listing th {
     font-weight: bold;
 }
-table.listing {margin: 0; width: 100%; font-size: 90%;}
+table.listing {margin: 0; width: 100%; font-size: 93%;}
 table.listing, table.listing tbody, table.listing td.end-of-section {
     border-bottom: 1px solid #d2d2d2;}
 table.listing thead, table.listing thead th, table.listing tfoot tr,
@@ -644,13 +644,13 @@ table.listing tfoot td {border: 1px solid #d2d2d2;}
 table.listing thead td {border: none;}
 tr.white {background-color: #fff;}
 tr.shaded {background-color: #f6f6f6;}
-table.listing tr.note {font-size: smaller;}
+table.listing tr.note {font-size: 77%;}
 .amount {text-align: right;}
 table.listing th, table.listing td {padding: 0.25em;}
 /* We don't want extra padding on nested tables, such as batch navigation. */
 table.listing table th, table.listing table td {padding: 0;}
 table.listing thead th, table.listing tr.thead th {
-    font-size: 1.125em; white-space: nowrap;}
+    font-size: 108%; white-space: nowrap;}
 table.listing td {border: 1px #d2d2d2; border-style: dotted none none none;}
 table.listing tr.note td {border-style: none;}
 table.listing img {vertical-align: middle;}
@@ -663,7 +663,7 @@ table.listing table tfoot td, table.listing table td {
 table.listing table.simple {margin-left: 2em;}
 table.listing table.simple td {padding: 0.25em;}
 table.listing .section-heading {
-  font-size: 1.2em;
+  font-size: 108%;
   border: none;
   padding-top: 1.5em;
 }
@@ -823,7 +823,7 @@ ol.breadcrumbs {
     list-style-type: none;
     clear: both;
     margin-bottom: 2em;
-    font-size: 80%;
+    font-size: 77%;
 }
 ol.breadcrumbs li {
     display:inline;
@@ -853,7 +853,7 @@ ol.breadcrumbs li:last-child {
 }
 /* The 'Log Out' button lacks the right margin that buttons usually have: */
 #logincontrol input[type='submit'] {
-  font-size: smaller;
+  font-size: 77%;
   margin-right: 0;
 }
 
