--- a/buildout-templates/bin/retest.in
+++ b/buildout-templates/bin/retest.in
@@ -31,9 +31,10 @@ import sys
 from itertools import takewhile
 from pprint import pprint
 
+${python-relative-path-setup}
 
 # The test script for this branch.
-TEST = '${buildout:directory}/bin/test'
+TEST = ${buildout:directory/bin/test|path-repr}
 
 # Regular expression to match numbered stories.
 STORY_RE = re.compile("(.*)/\d{2}-.*")
