--- a/buildout.cfg
+++ b/buildout.cfg
@@ -11,6 +11,7 @@ parts =
 unzip = true
 eggs-directory = eggs
 download-cache = download-cache
+relative-paths = true
 
 # Disable this option temporarily if you want buildout to find software
 # dependencies *other* than those in our download-cache.  Once you have the
