--- a/buildout-templates/bin/jstest.in
+++ b/buildout-templates/bin/jstest.in
@@ -1,4 +1,4 @@
-#! /usr/bin/env ${buildout:directory}/bin/py
+#!${buildout:executable} -S
 # Copyright 2009 Canonical Ltd.  This software is licensed under the
 # GNU Affero General Public License version 3 (see the file LICENSE).
 
@@ -13,6 +13,12 @@ The script exit codes are:
     2: suite failure
 
 """
+
+# Initialize our paths.
+${python-relative-path-setup}
+import sys
+sys.path.insert(0, ${scripts:parts-directory|path-repr})
+import site
 
 import subprocess
 import os
