--- a/buildout-templates/bin/kill-test-services.in
+++ b/buildout-templates/bin/kill-test-services.in
@@ -1,9 +1,14 @@
-#! /usr/bin/env ${buildout:directory}/bin/py
+#!${buildout:executable} -S
 #
 # Copyright 2009 Canonical Ltd.  This software is licensed under the
 # GNU Affero General Public License version 3 (see the file LICENSE).
 """Kill all the test services that may persist between test runs."""
 
+# Initialize our paths.
+${python-relative-path-setup}
+import sys
+sys.path.insert(0, ${scripts:parts-directory|path-repr})
+import site
 
 # Tell canonical.config to use the testrunner config instance, so that
 # we don't kill the real services.
