--- a/buildout-templates/bin/sprite-util.in
+++ b/buildout-templates/bin/sprite-util.in
@@ -1,7 +1,12 @@
-#!/usr/bin/env ${buildout:directory}/bin/py
+#!${buildout:executable} -S
 
 import os
 import sys
+
+# Initialize our paths.
+${python-relative-path-setup}
+sys.path.insert(0, ${scripts:parts-directory|path-repr})
+import site
 
 from lp.services.spriteutils import SpriteUtil
 
@@ -21,8 +26,7 @@ else:
         print >> sys.stderr, usage()
         sys.exit(2)
 
-root = '${buildout:directory}'
-icing = os.path.join(root, 'lib/canonical/launchpad/icing')
+icing = ${buildout:directory/lib/canonical/launchpad/icing|path-repr}
 combined_image_file = os.path.join(icing, 'icon-sprites')
 positioning_file = os.path.join(icing, 'icon-sprites.positioning')
 css_template_file = os.path.join(icing, 'style-3-0.css.in')
