Moved the help pop-up css from icing/style.css to icing/style-3.0.css.in

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -795,6 +795,18 @@ th.descending {
   margin-right: 0.25em;
 }
 
+/* Help links */
+a.help {
+  border-bottom: 1px dotted #03a;
+  cursor: help;
+}
+a.help img {
+  border-bottom: 0px;
+}
+a.help:hover, a.help:hover {
+  text-decoration: none;
+}
+
 /* --- Other --- */
 
 /* No border on images that are links. */
