--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -795,6 +795,21 @@ th.descending {
   margin-right: 0.25em;
 }
 
+/* --- Help links --- */
+
+a.help {
+  border-bottom: 1px dotted #03a;
+  cursor: help;
+}
+
+a.help.icon {
+  border: none;
+}
+
+a.help:hover, a.help:hover {
+  text-decoration: none;
+}
+
 /* --- Other --- */
 
 /* No border on images that are links. */
