--- a/buildout-templates/bin/test.in
+++ b/buildout-templates/bin/test.in
@@ -109,6 +109,8 @@ warnings.filterwarnings(
 warnings.filterwarnings(
     'ignore', 'bzrlib.*was deprecated', DeprecationWarning,
     )
+# XXX: 2010-04-26, Salgado, bug=570246: Silence python2.6 deprecation
+# warnings.
 # We cannot narrow this warnings filter to just twisted because
 # warnings.warn_explicit() sees this import as coming from importfascist, not
 # from twisted.  It makes no sense to put module='importfascist' here though
