reapply changes to less exotically constructed tree

--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -45,7 +45,7 @@ bugzilla-3.4.example.com.password: test
 
 [codebrowse]
 cachepath: /var/tmp/codebrowse.launchpad.dev/cache
-log_folder:
+log_folder: /var/tmp/codebrowse.launchpad.dev/logs
 launchpad_root: https://code.launchpad.dev/
 secret_path: configs/development/codebrowse-secret
 
