Add script to populate DatabaseTableStats

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1848,3 +1848,8 @@ public.libraryfilecontent               = SELECT, INSERT, UPDATE
 # to see its activity separate from update-stats.py
 type=user
 groups=statistician
+
+[update-database-table-stats]
+type=user
+groups=script
+public.update_database_table_stats()    = EXECUTE
