Adds the a.help.icon class to Curtis' style-3-0.css.in to remove the underline from the bug heat flames icon.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -230,6 +230,9 @@ a.help {
     border-bottom: 1px dotted #03a;
     cursor: help;
     }
+a.help.icon {
+    border: none;
+}
 a.help:hover, a.help:hover {
     text-decoration: none;
     }
