--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -110,6 +110,10 @@ uploader: none
 # datatype: string
 root: none
 
+# Optional sources.list entry to send to build slaves.
+# datatype: string
+extra_slave_sources_list: none
+
 
 [buildsequencer]
 # The name of the log file for the sequencer (passed to twistd)
