--- a/configs/development/launchpad-lazr.conf
+++ b/configs/development/launchpad-lazr.conf
@@ -16,6 +16,7 @@ error_dir: /var/tmp/codehosting.test
 [builddmaster]
 root: /var/tmp/builddmaster/
 uploader: scripts/process-upload.py -Mvv
+extra_slave_sources_list: None
 
 [buildsequencer]
 mailproblemsto: root
