Ensure that recipe builds send a configured sources.list to the slave for an archive that contains the bzr-builder package

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -110,9 +110,11 @@ uploader: none
 # datatype: string
 root: none
 
-# Optional sources.list entry to send to build slaves.
+# Optional sources.list entry to send to build slaves when doing recipe
+# builds involving bzr-builder.  Use this form so that the series is set:
+# deb http://foo %(series)s main
 # datatype: string
-extra_slave_sources_list: none
+bzr_builder_sources_list: none
 
 
 [buildsequencer]
