Made distromirrorstatus's which are fresher than one day green.

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -1656,7 +1656,9 @@ a.unofficial-tag {
 .distromirrorstatusONEHOURBEHIND,
 .distromirrorstatusTWOHOURSBEHIND,
 .distromirrorstatusFOURHOURSBEHIND,
-.distromirrorstatusSIXHOURSBEHIND,
+.distromirrorstatusSIXHOURSBEHIND {
+    color: green;
+    }
 .distromirrorstatusONEDAYBEHIND {
     color: #f60;
     }
