Add select permissions for the codeimport table to the processmail user.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1501,6 +1501,7 @@ public.branchmergeproposaljob           = SELECT, INSERT
 public.branchsubscription               = SELECT, INSERT
 public.branchvisibilitypolicy           = SELECT
 public.bugbranch                        = SELECT
+public.codeimport                       = SELECT
 public.codereviewmessage                = SELECT, INSERT
 public.codereviewvote                   = SELECT, INSERT, UPDATE
 public.diff                             = SELECT, INSERT, UPDATE
