Add database user cpu utilization stats too

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1849,7 +1849,14 @@ public.libraryfilecontent               = SELECT, INSERT, UPDATE
 type=user
 groups=statistician
 
-[update-database-table-stats]
+[database_stats_update]
 type=user
 groups=script
-public.update_database_table_stats()    = EXECUTE
+public.update_database_stats()          = EXECUTE
+
+[database_stats_report]
+type=user
+groups=script
+public.databasetablestats               = SELECT
+public.databasecpustats                 = SELECT
+
