--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -818,7 +818,7 @@ public.structuralsubscription           = SELECT
 
 [fiera]
 type=user
-groups=script
+groups=script,translations_approval
 public.account                                  = SELECT
 public.archive                                  = SELECT, UPDATE
 public.archivearch                              = SELECT, UPDATE
