Enable generation of templates.

--- a/lib/canonical/config/schema-lazr.conf
+++ b/lib/canonical/config/schema-lazr.conf
@@ -1598,7 +1598,7 @@ translate_pages_max_batch_size: 50
 
 # Generate templates using the buildfarm?
 # datatype: boolean
-generate_templates: False
+generate_templates: True
 
 [rosetta_pofile_stats]
 # In daily runs of pofile statistics update, check for
