--- a/buildout-templates/_pythonpath.py.in
+++ b/buildout-templates/_pythonpath.py.in
@@ -35,10 +35,10 @@ if ('site' in sys.modules and
         sys.modules['site'].__file__, os.path.join(site_dir, 'site.py')))
 
 if site_dir not in sys.path:
+    sys.path.insert(0, site_dir)
+elif 'site' not in sys.modules:
     # XXX 2010-05-04 gary bug 575206
-    # This one line is to support Mailman 2, which does something funky
+    # This one line is to support Mailman 2, which does something unexpected
     # to set up its paths.
     sys.path[:] = [p for p in sys.path if 'site-packages' not in p]
-    # (End of triple-X code.)
-    sys.path.insert(0, site_dir)
 import site # sets up paths
