--- a/buildout-templates/bin/test.in
+++ b/buildout-templates/bin/test.in
@@ -162,7 +162,7 @@ defaults = {
     # Find tests in the tests and ftests directories
     'tests_pattern': '^f?tests$',
     'test_path': [${buildout:directory/lib|path-repr}],
-    'package': ['canonical', 'lp', 'devscripts'],
+    'package': ['canonical', 'lp', 'devscripts', 'launchpad_loggerhead'],
     'layer': ['!(MailmanLayer)'],
     }
 
