Provide a separate DB user for translations distroseries copy.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -427,6 +427,10 @@ public.translator                       = SELECT
 public.validpersoncache                 = SELECT
 public.validpersonorteamcache           = SELECT
 
+[translations_distroseries_copy]
+type=user
+groups=poimport
+
 [translations_import_queue_gardener]
 # Translations import queue management
 type=user
