--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -1040,6 +1040,7 @@ public.distribution                     = SELECT
 public.distroseries                     = SELECT, UPDATE
 public.distroarchseries                 = SELECT
 public.sourcepackagepublishinghistory   = SELECT
+public.distributionsourcepackage        = SELECT, INSERT, UPDATE
 public.sourcepackagefilepublishing      = SELECT
 public.binarypackagefilepublishing      = SELECT
 public.binarypackagepublishinghistory   = SELECT
