--- a/buildout.cfg
+++ b/buildout.cfg
@@ -27,7 +27,9 @@ allow-picked-versions = false
 
 prefer-final = true
 
-develop = .
+develop =
+        .
+        lazr.restful
 
 [configuration]
 instance_name = development
