--- a/configs/testrunner/launchpad-lazr.conf
+++ b/configs/testrunner/launchpad-lazr.conf
@@ -197,6 +197,10 @@ dbuser: process-apport-blobs
 oops_prefix: TAPPORTBLOB
 error_dir: /var/tmp/lperr.test
 
+[request_daily_builds]
+oops_prefix: TRDB
+error_dir: /var/tmp/lperr.test
+
 [rosetta]
 generate_templates: True
 
