--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -15,6 +15,7 @@ public_schemas=ts2
 type=group
 public.activity()                          = EXECUTE
 public.person_sort_key(text, text)         = EXECUTE
+public.calculate_bug_heat(integer)         = EXECUTE
 public.debversion_sort_key(text)           = EXECUTE
 public.null_count(anyarray)                = EXECUTE
 public.valid_name(text)                    = EXECUTE
