Allow for increased width of whiteboard text

--- a/lib/canonical/launchpad/icing/style-3-0.css.in
+++ b/lib/canonical/launchpad/icing/style-3-0.css.in
@@ -409,6 +409,10 @@ ol.subordinate {
     /* Keep the abilty to hide list entries. */
     display: none;
     }
+div.widetext p {
+    max-width: 60em;
+    margin-bottom: 1.0em;
+    }
 .portlet dd {
     margin-bottom: 0.5em;
     font-size: 85%;
