Enable update on buildqueue to support setting lastscore.

--- a/database/schema/security.cfg
+++ b/database/schema/security.cfg
@@ -680,7 +680,7 @@ public.validpersonorteamcache                   = SELECT
 type=user
 groups=script
 public.archive                                  = SELECT
-public.buildqueue                               = SELECT, INSERT
+public.buildqueue                               = SELECT, INSERT, UPDATE
 public.branch                                   = SELECT
 public.component                                = SELECT
 public.distroseries                             = SELECT
